Small changes to side-nab

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -22,7 +22,7 @@
 
 .side-nav-beta {
     .main-content__sidebar;
-    margin: @box-spacing 0;
+    margin: 0 0 @box-spacing 0;
     
     ul {
         list-style: none;
