--- a/public/css/site.css
+++ b/public/css/site.css
@@ -4898,7 +4898,7 @@ input.main-header__search__input {
 .title__subheading {
   margin-bottom: 2rem;
   margin-top: 2rem;
-  padding: 1rem 0 1rem 0;
+  padding: 1rem 0 .35rem 0;
   border-top: #eeeeee 1px solid;
   border-bottom: #eeeeee 1px solid;
   font-size: 0.875rem;
@@ -4916,7 +4916,7 @@ input.main-header__search__input {
   margin: auto;
   clear: left;
   padding: 0 1rem;
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-bottom: 1.5rem;
 }
 .main-content:after {
@@ -8011,12 +8011,11 @@ input.tablesort-filter {
 .steps {
   padding: 0.75rem 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
-  background-color: white;
+  background-color: #f2f8ff;
   color: #191926;
-  border: 0px #bfbfbf solid;
+  border: 0px #ffffff solid;
   display: block;
   border-width: 1px;
-  border-top-width: 0.5rem;
   margin-top: 2rem;
 }
 .steps h1,
@@ -8026,7 +8025,7 @@ input.tablesort-filter {
   font-size: 1.3rem;
 }
 .steps a {
-  border-bottom-color: #bfbfbf;
+  border-bottom-color: #ffffff;
 }
 .steps > *:first-child {
   padding-top: 0;
@@ -8052,9 +8051,9 @@ input.tablesort-filter {
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem;
   border: none;
-  background-color: #f2f2f2;
+  background-color: #d9e1ff;
   color: #191926;
-  border-bottom: 1px solid #bfbfbf;
+  border-bottom: 1px solid #ffffff;
   text-decoration: none;
   position: relative;
 }
@@ -8063,7 +8062,7 @@ input.tablesort-filter {
   font-family: 'FontAwesome';
   content: "\f054";
   color: #191926;
-  background-color: #e6e6e6;
+  background-color: #bfcdff;
   height: 100%;
   position: absolute;
   right: 0;
@@ -8073,11 +8072,11 @@ input.tablesort-filter {
   text-align: center;
 }
 .steps .callout__link:hover {
-  background-color: #e6e6e6;
+  background-color: #bfcdff;
   color: #191926;
 }
 .steps .callout__link:hover:after {
-  background-color: #cccccc;
+  background-color: #8ca4ff;
 }
 .steps .callout__link--anchor:after {
   content: "\f063";
@@ -8090,12 +8089,16 @@ input.tablesort-filter {
 }
 .steps h3 {
   color: #004b88;
+  font-weight: 700;
+  font-size: 1.1rem;
+  margin-bottom: 0.9375rem;
 }
 .steps ul {
   margin: 0;
-  padding: 0 2rem;
+  padding: 0.25rem 2rem;
 }
 .steps ul li {
+  font-size: 0.95rem;
   margin-bottom: 1rem;
 }
 .steps ul li:first-child {
@@ -8108,6 +8111,7 @@ input.tablesort-filter {
   border-width: 0;
 }
 .steps a:hover {
+  border-bottom: 0px #004b88 solid;
   border-bottom-width: 1px;
 }
 /**
@@ -8827,7 +8831,7 @@ input.tablesort-filter {
   overflow: hidden;
   margin-bottom: 1.5rem;
   margin: 0;
-  margin: 1rem 0;
+  margin: 0 0 1rem 0;
 }
 @media (max-width: 599px) {
   .side-nav-beta {
@@ -8846,7 +8850,7 @@ input.tablesort-filter {
 }
 .side-nav-beta li a {
   margin-bottom: 1px;
-  padding: 0.75rem 1rem;
+  padding: 0.5625rem 0.75rem;
   display: block;
   border-bottom: none;
 }
