Add a white callout
Not sure if this is best approach, so may revert

--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -52,6 +52,14 @@
     	.callout--border--left; 
     }
 
+  // White
+  &--white {
+    .callout( 
+      @white,
+      @white 
+    ); 
+  }
+
     // Brand - Heritage
     &--heritage	{
     	.callout( 
