--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -84,13 +84,13 @@ aside,
 .callout* {
 	page-break-inside: avoid;
 }
+
 .revealable,
 .collapse,
 .callout--heritage,
 .callout--responsible,
 .callout--inventive,
-.callout--generous,
-.callout--white {
+.callout--generous {
 	border: 1px solid @gray-5;
 	padding: @box-spacing;
 	margin: @box-spacing 0;
