--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -5,7 +5,7 @@
  .title__subheading {
     margin-bottom: 2rem;
     margin-top: 2rem;
-    padding: 1rem 0 .35rem 0;
+    padding: 1rem 0 1rem 0;
     border-top: @gray-7 1px solid;
     border-bottom: @gray-7 1px solid;
     font-size: @font-size-small;
@@ -24,7 +24,7 @@
     .limit-width;
     .clearfix;
     padding: 0 @box-spacing;
-    margin-top: @box-spacing*2;
+    margin-top: @box-spacing;
     margin-bottom: @box-spacing*1.5;
     &--full-width {
         max-width: 60em;
