--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -22,7 +22,7 @@
 
 .side-nav-beta {
     .main-content__sidebar;
-    margin: 0 0 @box-spacing 0;
+    margin: @box-spacing 0;
     
     ul {
         list-style: none;
@@ -34,7 +34,7 @@
         //border-left: @box-spacing/2 solid @gray-6;
         a {
             margin-bottom: 1px;
-            padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75;
+            padding: @box-spacing-vertical @box-spacing-horizontal;
             display: block;
             border-bottom: none;
         }
