--- a/libs/site.less
+++ b/libs/site.less
@@ -18,7 +18,6 @@
 @import "base/type";
 @import "base/utility";
 @import "base/helpers";
-@import "base/simplegrid";
 
 /* Mixin files */
 @import "mixins/callout";
@@ -40,7 +39,7 @@
 @import "modules/main-nav";
 @import "modules/page-info";
 @import "modules/breadcrumb";
-// @import "modules/cab-forms"; // This should no longer be needed once we've updated the tools
+@import "modules/cab-forms";
 @import "modules/callout";
 @import "modules/revealable";
 @import "modules/tablesort";
