Thinner border radius and no stacking of icons on buttons

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -191,7 +191,7 @@ select[size] {
 textarea,
 input,
 select {
-    border: 1px solid @gray-6;
+    border: 1px solid @gray-5;
 }
 
 textarea {
@@ -202,6 +202,8 @@ textarea {
 input[type="email"],
 input[type="password"],
 input[type="text"],
+input[id*="dob-"],
+input[class*="dob-"],
 textarea,
 select {
     width: 100%;
