--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2137,7 +2137,7 @@ select[size] {
 textarea,
 input,
 select {
-  border: 1px solid #dfdfdf;
+  border: 1px solid #bfbfbf;
 }
 textarea {
   height: 5.5rem;
@@ -2146,6 +2146,8 @@ textarea {
 input[type="email"],
 input[type="password"],
 input[type="text"],
+input[id*="dob-"],
+input[class*="dob-"],
 textarea,
 select {
   width: 100%;
@@ -2155,6 +2157,8 @@ select {
 input[type="email"]:focus:required:invalid,
 input[type="password"]:focus:required:invalid,
 input[type="text"]:focus:required:invalid,
+input[id*="dob-"]:focus:required:invalid,
+input[class*="dob-"]:focus:required:invalid,
 textarea:focus:required:invalid,
 select:focus:required:invalid {
   outline: 2px solid #df3034;
@@ -2162,6 +2166,8 @@ select:focus:required:invalid {
 input[type="email"]:focus:required:invalid ~ .invalid,
 input[type="password"]:focus:required:invalid ~ .invalid,
 input[type="text"]:focus:required:invalid ~ .invalid,
+input[id*="dob-"]:focus:required:invalid ~ .invalid,
+input[class*="dob-"]:focus:required:invalid ~ .invalid,
 textarea:focus:required:invalid ~ .invalid,
 select:focus:required:invalid ~ .invalid {
   display: block !important;
@@ -2169,6 +2175,8 @@ select:focus:required:invalid ~ .invalid {
 input[type="email"]:focus:required:valid,
 input[type="password"]:focus:required:valid,
 input[type="text"]:focus:required:valid,
+input[id*="dob-"]:focus:required:valid,
+input[class*="dob-"]:focus:required:valid,
 textarea:focus:required:valid,
 select:focus:required:valid {
   outline: 2px solid #537d2d;
@@ -2176,6 +2184,8 @@ select:focus:required:valid {
 input[type="email"]:focus:required:valid ~ .valid,
 input[type="password"]:focus:required:valid ~ .valid,
 input[type="text"]:focus:required:valid ~ .valid,
+input[id*="dob-"]:focus:required:valid ~ .valid,
+input[class*="dob-"]:focus:required:valid ~ .valid,
 textarea:focus:required:valid ~ .valid,
 select:focus:required:valid ~ .valid {
   display: block !important;
@@ -2183,6 +2193,8 @@ select:focus:required:valid ~ .valid {
 input[type="email"]:focus,
 input[type="password"]:focus,
 input[type="text"]:focus,
+input[id*="dob-"]:focus,
+input[class*="dob-"]:focus,
 textarea:focus,
 select:focus {
   border-width: 1px;
@@ -3328,15 +3340,12 @@ input.custom-dropdown__button {
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.tick-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .tick-button-icon:after {
   content: "\f00c";
@@ -3346,6 +3355,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .tick-button-icon-email:after {
   content: "\f003";
@@ -3362,15 +3378,12 @@ input.custom-dropdown__button {
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.right-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .right-button-icon:after {
   content: "\f054";
@@ -3380,6 +3393,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .right-button-icon-email:after {
   content: "\f003";
@@ -3390,21 +3410,21 @@ input.custom-dropdown__button {
   width: 100%;
   left: 0;
 }
+.right-button-icon:after {
+  padding-left: 5px;
+}
 .left-button-icon {
   font-family: FontAwesome;
   font-weight: normal;
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.left-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .left-button-icon:after {
   content: "\f053";
@@ -3414,6 +3434,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .left-button-icon-email:after {
   content: "\f003";
@@ -3424,21 +3451,21 @@ input.custom-dropdown__button {
   width: 100%;
   left: 0;
 }
+.left-button-icon:after {
+  padding-right: 2px;
+}
 .down-button-icon {
   font-family: FontAwesome;
   font-weight: normal;
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.down-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .down-button-icon:after {
   content: "\f078";
@@ -3448,6 +3475,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .down-button-icon-email:after {
   content: "\f003";
@@ -3464,15 +3498,12 @@ input.custom-dropdown__button {
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.up-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .up-button-icon:after {
   content: "\f077";
@@ -3482,6 +3513,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .up-button-icon-email:after {
   content: "\f003";
@@ -3498,15 +3536,12 @@ input.custom-dropdown__button {
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.exclamation-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .exclamation-button-icon:after {
   content: "\f12a";
@@ -3516,6 +3551,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .exclamation-button-icon-email:after {
   content: "\f003";
@@ -3532,15 +3574,12 @@ input.custom-dropdown__button {
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.email-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .email-button-icon:after {
   content: "\f003";
@@ -3550,6 +3589,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .email-button-icon-email:after {
   content: "\f003";
@@ -3560,21 +3606,21 @@ input.custom-dropdown__button {
   width: 100%;
   left: 0;
 }
+.email-button-icon:after {
+  padding-left: 1px;
+}
 .print-button-icon {
   font-family: FontAwesome;
   font-weight: normal;
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.print-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .print-button-icon:after {
   content: "\f02f";
@@ -3584,6 +3630,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .print-button-icon-email:after {
   content: "\f003";
@@ -3600,15 +3653,12 @@ input.custom-dropdown__button {
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.restart-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .restart-button-icon:after {
   content: "\f01e";
@@ -3618,6 +3668,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .restart-button-icon-email:after {
   content: "\f003";
@@ -3634,15 +3691,12 @@ input.custom-dropdown__button {
   position: relative;
   display: inline-block;
   width: 2rem;
-  height: 1.4rem;
+  height: 2rem;
   margin-left: 1rem;
-  line-height: 1.2rem;
+  line-height: 1.785;
   vertical-align: middle;
+  margin-top: -0.075rem;
   color: #ffffff;
-}
-.save-button-icon:before {
-  content: "\f1db";
-  font-size: 2.3rem;
 }
 .save-button-icon:after {
   content: "\f019";
@@ -3652,6 +3706,13 @@ input.custom-dropdown__button {
   vertical-align: middle;
   width: 100%;
   left: 0;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 20px;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 20px;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 20px;
+  border: 2px solid #ffffff;
 }
 .save-button-icon-email:after {
   content: "\f003";
