Update css from less
Stupid compiler

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -109,13 +109,13 @@
 .right-button-icon {
     .a-icon-stack("\f054");
     &:after {
-        padding-left: 2px; // Encourage optical centring of arrow icon
+        padding-left: 2px; // Optical centring of arrow icon
     }
 }
 .left-button-icon {
     .a-icon-stack("\f053");
     &:after {
-        padding-right: 2px; // Encourage optical centring of arrow icon
+        padding-right: 2px; // Optical centring of arrow icon
     }
 }
 .down-button-icon {
@@ -131,7 +131,7 @@
 .email-button-icon {
     .a-icon-stack("\f003");
     &:after {
-        padding-left: 1px; // Encourage optical centring of arrow icon
+        padding-left: 1px; // Optical centring of arrow icon
     }
 }
 .print-button-icon {
