Grid fixes for older versions of IE

--- a/libs/base/simplegrid.less
+++ b/libs/base/simplegrid.less
@@ -12,6 +12,9 @@
     clear: both;
     padding: 0;
     overflow: hidden;
+    // Create IE7&8 gutters. Only needed if gutter 
+    // value is in modern units
+    margin-bottom: 2%\9 !important;
 }
 
 // Create mixin
@@ -19,16 +22,22 @@
 // for example .col(3/5); will make an element width 60%
 .col(@x;@y;) {
 	float: left;
-	// Create IE7&8 fallback. Due to lack of calc() support
-	// columns use an extra 2% as a gutter
-	width: unit(percentage((@x/@y)) - 2, ~"%\9");
-	margin-right: 2%\9;
+
 	// Create calc grid for modern browsers
 	width: calc(percentage((@x/@y)) ~"-"@gutters);
 	margin-right: @gutters;
+
+	// Create IE8 fallback. Due to lack of calc() support
+	// columns use an extra 2% as a gutter
+	width: unit(percentage((@x/@y)) - 2, ~"%\9");
+	// Create IE7 fallback. IE7 has a hard time with
+	// decimal places in percentages
+	*width: unit(floor(percentage((@x/@y)) - 2), ~"%\9 !important");
+	margin-right: 2%\9 !important;
+
 	// Remove bottom margin from the last nested row, to
 	// keep vertical spacing consistent
-    & > *[class^="row"]:last-child {
+    & > *[class*="row"]:last-child {
     	margin-bottom: 0;
     }
 }
