Form error tweak

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -64,14 +64,14 @@
 
 form {
     .invalid {
-        display: none;
         color: @red;
         padding-top: @box-spacing/4;
+        clear: both;
     }
     .valid {
-        display: none;
         color: @green;
         padding-top: @box-spacing/4;
+        clear: both;
     }
     small {
         color: @gray-3;
