Update back button
– Move span to before label on button

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -114,6 +114,8 @@
 }
 .left-button-icon {
     .a-icon-stack("\f053");
+    margin-right: @box-spacing;
+    margin-left: 0;
     &:after {
         padding-right: 2px; // Optical centring of arrow icon
     }
