--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -77,11 +77,11 @@
     position: relative;
     display: inline-block;
     width: @box-spacing*2;
-    height: @box-spacing*2;
+    height: @box-spacing*.5;
     margin-left: @box-spacing;
     line-height: @line-height-base*1.05;
     vertical-align: middle;
-    margin-top: -@box-spacing-vertical*.1;
+    margin-top: -@box-spacing-vertical*2.5;
     color: @white;
 
 //    &:before {
@@ -127,7 +127,7 @@
     .a-icon-stack("\f077");
 }
 .exclamation-button-icon {
-    .a-icon-stack("\f12a");
+    .a-icon-stack("\f071");
 }
 // Actions
 .email-button-icon {
