--- a/libs/site.less
+++ b/libs/site.less
@@ -28,6 +28,7 @@
 @import "mixins/revealable";
 @import "mixins/popup";
 @import "mixins/vertical-align";
+@import "mixins/btn-icon";
 
 /* Module files */
 @import "modules/extent-switcher-modal";
