Fixed left icon showing on right

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -78,7 +78,7 @@
     .btn-icon("\f054");
 }
 .left-button-icon {
-    .btn-icon("\f053", right);
+    .btn-icon("\f053", left);
 }
 .down-button-icon {
     .btn-icon("\f078");
