--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -129,7 +129,7 @@ small {
 a {
     color: @link-color;
     text-decoration: none;
-    border-bottom: 0.0625rem solid lighten(@link-color, 50%);
+    border-bottom: 1px solid lighten(@link-color, 50%);
     
     &:hover,
     &:focus {
