--- a/public/css/chat-styles.css
+++ b/public/css/chat-styles.css
@@ -159,7 +159,7 @@ small {
 a {
   color: #253460;
   text-decoration: none;
-  border-bottom: 0.0625rem solid #a7b5dd;
+  border-bottom: 1px solid #a7b5dd;
 }
 a:hover,
 a:focus {
@@ -363,4 +363,3 @@ textarea {
   background: #004b88;
   color: #ffffff;
 }
-/*# sourceMappingURL=chat-styles.css.map */
