--- a/public/css/site.css
+++ b/public/css/site.css
@@ -4167,7 +4167,7 @@ small {
 a {
   color: #253460;
   text-decoration: none;
-  border-bottom: 0.0625rem solid #a7b5dd;
+  border-bottom: 1px solid #a7b5dd;
 }
 a:hover,
 a:focus {
