Add two line forms

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -339,6 +339,14 @@ input[type="file"]::before {
 .radio--block {
     clear: left;
     float: left;
+    p {
+       display: block;
+       float: right;
+       margin: 0; 
+        span {
+            font-weight: @font-weight-bolder;
+        }
+    }
 }
 
 .radio,
