--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -135,6 +135,9 @@ ol li, ul li {
         color: @gray-4;
         padding: 0 2em; 
     }
+    fieldset:last-child {
+        margin-bottom: 0;
+    }
 }
 span.code {
     color: #333;
